--- a/gh-pages/src/supported-browsers.html
+++ b/gh-pages/src/supported-browsers.html
@@ -348,18 +348,18 @@ layout: "default.html"
     features. However, there are exceptions that you should take into account if
     you rely heavily on webviews. For details on which APIs are unsupported in
     Android and iOS webviews, see
-    <a href="https://caniwebview.com">caniwebview.com</a>
+    <a href="https://caniwebview.com">caniwebview.com</a>.
   </p>
   <p>
     <strong>* NOTE:</strong> KaiOS is a feature phone operating system used for
-    flip phones which implements the Gecko engine from Firefox. It is possible
-    to derive feature support in KaiOS based on Gecko feature support, but
-    please be aware that KaiOS has a significantly different set of UI
-    limitations and interaction model compared to the other browsers on this
-    page. For more information, see the KaiOS developer documentation.
+    flip phones which uses the Gecko engine from Firefox. It is possible to
+    derive feature support in KaiOS based on Gecko feature support, but please
+    be aware that KaiOS has a significantly different set of UI limitations and
+    interaction model compared to the other browsers on this page. For more
+    information, see the KaiOS developer documentation.
   </p>
   <p>
-    Other browsers built on Chromium/Blink, Gecko and WebKit will also support
+    Other browsers built on Chromium/Blink, Gecko, and WebKit also support
     Baseline features. If you work on a browser and can provide data connecting
     your versions back to their upstream engine for
     <code>baseline-browser-mapping</code>, please
